<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/schedule_event_padding"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/invite_users_prompt"
            android:textAppearance="@style/prompt_text"/>

        <ListView
            android:id="@+id/users_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

        </ListView>

        <TextView
            style="@style/prompt_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_list_prompt" />

        <ListView
            android:id="@+id/suggested_times_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">
            <Button
                android:id="@+id/invite_without_time_button"
                android:text="@string/invite_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/activity_bottom_button"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>